--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.9.5",
     "pinia": "^2.0.36",
+    "vee-validate": "^4.9.5",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
