--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@types/nprogress": "^0.2.0",
         "@vee-validate/rules": "^4.9.5",
         "firebase": "^9.22.1",
         "howler": "^2.2.3",
+        "lodash": "^4.17.21",
+        "nprogress": "^0.2.0",
         "pinia": "^2.0.36",
         "vee-validate": "^4.9.5",
         "vue": "^3.3.2",
@@ -28,6 +31,7 @@
         "@rushstack/eslint-patch": "^1.2.0",
         "@tsconfig/node18": "^2.0.1",
         "@types/jsdom": "^21.1.1",
+        "@types/lodash": "^4.14.197",
         "@types/node": "^18.16.8",
         "@vitejs/plugin-vue": "^4.2.3",
         "@vue/eslint-config-prettier": "^7.1.0",
@@ -43,6 +47,7 @@
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.23",
         "prettier": "^2.8.8",
+        "rollup-plugin-visualizer": "^5.9.2",
         "start-server-and-test": "^2.0.0",
         "tailwindcss": "^3.3.2",
         "typescript": "~5.0.4",
