--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "vite",
         "build": "run-p build-only",
         "preview": "vite preview",
-        "test:unit": "vitest",
+        "test:unit": "vitest --ui",
         "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
         "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
         "build-only": "vite build",
@@ -34,6 +34,7 @@
         "@types/lodash": "^4.14.197",
         "@types/node": "^18.16.8",
         "@vitejs/plugin-vue": "^4.2.3",
+        "@vitest/ui": "^0.34.3",
         "@vue/eslint-config-prettier": "^7.1.0",
         "@vue/eslint-config-typescript": "^11.0.3",
         "@vue/test-utils": "^2.3.2",
